--- a/client/app/templates/code-tab.html
+++ b/client/app/templates/code-tab.html
@@ -1,7 +1,7 @@
 <div class="view-panel code-panel">
     <!-- TODO REFACTOR EXTRACT-->
     <div class="btn btn-default" data-ng-disabled="!data.id" data-ng-click="saveScript()">Save</div>
-    <div class="btn btn-default" data-ng-click="saveScriptAs()">Save as</div>
+    <div class="btn btn-default" data-ng-click="saveScriptAs()">Save As</div>
     <div class="btn btn-default" data-ng-disabled="!data.id" data-ng-click="deleteScript()">Delete</div>
 </div>
 <div class="code-editor" ui-ace="aceOption" ng-model="code"></div>
