--- a/client/app/templates/pipeline-tab.html
+++ b/client/app/templates/pipeline-tab.html
@@ -1,9 +1,21 @@
 <div class="view-panel pipeline-panel">
     <!-- TODO REFACTOR EXTRACT-->
     <div class="btn btn-default" data-ng-disabled="!data.id" data-ng-click="savePipeline()">Save</div>
-    <div class="btn btn-default" data-ng-click="savePipelineAs()">Save as</div>
+    <div class="btn btn-default" data-ng-click="savePipelineAs()">Save As</div>
     <div class="btn btn-default" data-ng-disabled="!data.id" data-ng-click="deletePipeline()">Delete</div>
     <div class="btn btn-default" data-ng-disabled="!data.id" data-ng-click="runPipeline()">Run Pipeline</div>
+    <div class="btn-group" uib-dropdown>
+        <button id="single-button" type="button" class="btn btn-default" uib-dropdown-toggle ng-disabled="disabled">
+            Add Node <span class="caret"></span>
+        </button>
+        <ul class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="single-button">
+            <li role="menuitem"><a>Open Model</a></li>
+            <li role="menuitem"><a>Run Simulation</a></li>
+<!--             <li role="menuitem"><a href="#">Something else here</a></li>
+            <li class="divider"></li>
+            <li role="menuitem"><a href="#">Separated link</a></li> -->
+        </ul>
+    </div>
 <!--     <script type="text/ng-template" id="nodeOptions.html">
         <div class="pipelinenode-options">
             <ul>
