Reimplemented aimsun executor, added special nodes. Pipelines need to have inputs/outputs (TODO)

--- a/client/app/templates/pipeline-tab.html
+++ b/client/app/templates/pipeline-tab.html
@@ -9,7 +9,8 @@
             Add Node <span class="caret"></span>
         </button>
         <ul class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="single-button">
-            <!-- <li role="menuitem" data-ng-click="addNode('Open Model')"><a>Open Model</a></li> -->
+            <li role="menuitem" data-ng-click="addNode('Open Model')"><a>Open Model</a></li>
+            <li role="menuitem" data-ng-click="addNode('Close Model')"><a>Close Model</a></li>
             <li role="menuitem" data-ng-click="addNode('Run Simulation')"><a>Run Simulation</a></li>
 <!--             <li role="menuitem"><a href="#">Something else here</a></li>
             <li class="divider"></li>
