--- a/client/app/templates/pipeline-tab.html
+++ b/client/app/templates/pipeline-tab.html
@@ -12,6 +12,8 @@
             <li role="menuitem" data-ng-click="addNode('Open Model')"><a>Open Model</a></li>
             <li role="menuitem" data-ng-click="addNode('Close Model')"><a>Close Model</a></li>
             <li role="menuitem" data-ng-click="addNode('Run Simulation')"><a>Run Simulation</a></li>
+            <li role="menuitem" data-ng-click="addInputs()"><a>Add Input</a></li>
+            <li role="menuitem" data-ng-click="addOutputs()"><a>Add Output</a></li>
 <!--             <li role="menuitem"><a href="#">Something else here</a></li>
             <li class="divider"></li>
             <li role="menuitem"><a href="#">Separated link</a></li> -->
@@ -54,7 +56,49 @@
 <div class="pipeline-container">
     <div class="connections"></div>
     <div class="nodes" data-ui-on-drop="dropHandler($event, $data, $channel)" data-drop-channel="{{acceptedChannels}}" ng-mousemove="mousemove($event);drawpath($event)" ng-mouseup="stopMoving($event)">
-        <div class="node-box" ng-repeat="nodeInfo in shapes" ng-mousedown="startMoving($event, null, nodeInfo);" ng-mouseup="maybeStopProp($event)" style="visibility: hidden;">
+        <div class=" node-box input-box" ng-if="pipelineInputs" ng-mousedown="startMoving($event, null, pipelineInputs);" ng-mouseup="maybeStopProp($event)" style="visibility: hidden;">
+            <div class="title">
+                <span>Inputs</span>
+                <div class="icon ion-trash-a" ng-dblclick="deleteInputs($event)"></div>
+            </div>
+            <div class="inputs_outputs">
+                <div class="io-row clearfix" ng-repeat="input in pipelineInputs.outputs">
+                    <div class="io-cell"></div>
+                    <div class="io-cell" uib-popover-template="contextOptions.template" popover-trigger="none" popover-placement="left" popover-is-open="input.isOpen" ng-context-menu="deleteConnetion($event, input)" popover-append-to-body="true">
+                        <span>{{input.name}}</span>
+                        <div class="circle end" ng-mousedown="createEndingConnection($event, input)" ng-mouseup="finishStartingConnection($event, input)"></div>
+                    </div>
+                </div>
+                <div class="io-row clearfix">
+                    <div class="io-cell add-inout">
+                        <div class="ion-android-add-circle"></div>
+                        <span>Add Input</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="node-box output-box" ng-if="pipelineOutputs" ng-mousedown="startMoving($event, null, pipelineOutputs);" ng-mouseup="maybeStopProp($event)" style="visibility: hidden;">
+            <div class="title">
+                <span>Outputs</span>
+                <div class="icon ion-trash-a" ng-dblclick="deleteOutputs($event)"></div>
+            </div>
+            <div class="inputs_outputs">
+                <div class="io-row clearfix" ng-repeat="output in pipelineOutputs.inputs">
+                    <div class="io-cell" uib-popover-template="contextOptions.template" popover-trigger="none" popover-placement="right" popover-is-open="output.isOpen" ng-context-menu="deleteConnetion($event, output)" popover-append-to-body="true">
+                        <div class="circle start" ng-mousedown="createStartingConnection($event, output)" ng-mouseup="finishEndingConnection($event, output)"></div>
+                        <span>{{output.name}}</span>
+                    </div>
+                    <div class="io-cell"></div>
+                </div>
+                <div class="io-row clearfix">
+                    <div class="io-cell add-inout">
+                        <div class="ion-android-add-circle"></div>
+                        <span>Add Output</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="node-box stdnodes" ng-repeat="nodeInfo in shapes" ng-mousedown="startMoving($event, null, nodeInfo);" ng-mouseup="maybeStopProp($event)" style="visibility: hidden;">
             <div class="title">
                 <span>{{nodeInfo.title}}</span>
                 <div class="icon ion-trash-a" ng-dblclick="deleteNode($event, nodeInfo)"></div>
