--- a/client/app/css/main.css
+++ b/client/app/css/main.css
@@ -166,6 +166,12 @@ treecontrol ul {
     user-select: none;
 }
 
+.firepad {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
 .pipeline-container,
 .code-editor {
     position: relative;
