--- a/client/app/css/main.css
+++ b/client/app/css/main.css
@@ -335,6 +335,27 @@ treecontrol ul {
     cursor: pointer;
 }
 
+.overlay {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    z-index: auto;
+}
+
+.btn.read-write {
+    background-color: #497f15;
+    color: #e6f6da;
+    opacity: 0.8;
+    margin-left: 20px;
+}
+
+.btn.read-only {
+    background-color: #7f6615;
+    color: #f6f0da;
+    opacity: 0.8;
+    margin-left: 20px;
+}
+
 ::-webkit-scrollbar,::-webkit-scrollbar {
     width: 7px;
     height: 7px;
