--- a/client/app/templates/pipeline-tab.html
+++ b/client/app/templates/pipeline-tab.html
@@ -1,8 +1,8 @@
 <div class="view-panel pipeline-panel">
     <!-- TODO REFACTOR EXTRACT-->
-    <div class="btn btn-default" data-ng-disabled="!data.id" data-ng-click="savePipeline()">Save</div>
+    <div class="btn btn-default" data-ng-disabled="!data.id || permission != 'read_write'" data-ng-click="savePipeline()">Save</div>
     <div class="btn btn-default" data-ng-click="savePipelineAs()">Save As</div>
-    <div class="btn btn-default" data-ng-disabled="!data.id" data-ng-click="deletePipeline()">Delete</div>
+    <div class="btn btn-default" data-ng-disabled="!data.id || permission != 'read_write'" data-ng-click="deletePipeline()">Delete</div>
     <div class="btn btn-default" data-ng-disabled="!data.id" data-ng-click="runPipeline()">Run Pipeline</div>
     <div class="btn-group" uib-dropdown>
         <button id="single-button" type="button" class="btn btn-default" uib-dropdown-toggle ng-disabled="disabled">
@@ -19,6 +19,8 @@
             <li role="menuitem"><a href="#">Separated link</a></li> -->
         </ul>
     </div>
+    <div class="btn read-only" ng-show="permission=='read_only'" disabled="disabled">Read Only</div>
+    <div class="btn read-write" ng-show="permission=='read_write'" disabled="disabled">Read Write</div>
 <!--     <script type="text/ng-template" id="nodeOptions.html">
         <div class="pipelinenode-options">
             <ul>
@@ -145,4 +147,5 @@
             </div>
         </div>
     </div>
+    <div ng-if="permission == 'read_only'" class="overlay"></div>
 </div>
