--- a/client/app/css/dark-theme.css
+++ b/client/app/css/dark-theme.css
@@ -106,8 +106,13 @@
     box-shadow:         0px 0px 11px 0px rgba(0, 0, 0, 0.75);*/
 }
 
+.pipeline-container .ion-information-circled,
 .pipeline-container .icon.ion-trash-a  {
     color: #666666;
+}
+
+.pipeline-container .ion-information-circled:hover {
+    color: #1371aa;
 }
 
 .pipeline-container .icon.ion-trash-a:hover  {
@@ -123,6 +128,12 @@
 .popover.left>.arrow:after {
     border-right-color: #1A1A1A;
     border-left-color: #1A1A1A;
+}
+
+.popover.top>.arrow:after,
+.popover.bottom>.arrow:after {
+    border-top-color: #1A1A1A;
+    border-bottom-color: #1A1A1A;
 }
 
 .pipelinenode-options > ul li {
