--- a/client/app/templates/pipeline-tab.html
+++ b/client/app/templates/pipeline-tab.html
@@ -103,9 +103,10 @@
             </div>
         </div>
         <div class="node-box stdnodes" ng-repeat="nodeInfo in shapes" ng-mousedown="startMoving($event, null, nodeInfo);" ng-mouseup="maybeStopProp($event)" style="visibility: hidden;">
-            <div class="title">
+            <div class="title" uib-popover="{{nodeInfo.hash}}" popover-trigger="none" popover-placement="top" popover-is-open="nodeInfo.infoShown">
                 <span>{{nodeInfo.title}}</span>
                 <div class="icon ion-trash-a" ng-dblclick="deleteNode($event, nodeInfo)"></div>
+                <div class="icon ion-information-circled" ng-if="nodeInfo.type != 'special'" ng-click="toggleInfoShown($event, nodeInfo)"></div>
             </div>
             <div class="inputs_outputs">
                 <!-- Adding special preceding & succeeding connectors -->
