--- a/client/app/css/dark-theme.css
+++ b/client/app/css/dark-theme.css
@@ -119,6 +119,11 @@
     color: #aa1313;
 }
 
+.nodes .popover-title {
+    background-color: #404040;
+    border-bottom-color: #787878;
+}
+
 .popover {
     background-color: #1A1A1A;
     color: #C4C4C4;
