--- a/client/app/templates/pipeline-tab.html
+++ b/client/app/templates/pipeline-tab.html
@@ -30,6 +30,11 @@
             </ul>
         </div>
     </script> -->
+    <script type="text/ng-template" id="nodeInfo.html">
+        <div style="padding: 7px; overflow: auto;">
+            <p>HASH: {{infoNodePopover.node.hash}}</p>
+        </div>
+    </script>
     <script type="text/ng-template" id="contextOptions.html">
         <div class="pipelinenode-options">
             <ul ng-if="contextOptions.obj.input">
@@ -102,8 +107,8 @@
                 </div>
             </div>
         </div>
-        <div class="node-box stdnodes" ng-repeat="nodeInfo in shapes" ng-mousedown="startMoving($event, null, nodeInfo);" ng-mouseup="maybeStopProp($event)" style="visibility: hidden;">
-            <div class="title" uib-popover="{{nodeInfo.hash}}" popover-trigger="none" popover-placement="top" popover-is-open="nodeInfo.infoShown">
+        <div class="node-box stdnodes" ng-repeat="nodeInfo in shapes" ng-mousedown="startMoving($event, null, nodeInfo);" ng-mouseup="maybeStopProp($event)" style="visibility: hidden;" uib-popover-template="infoNodePopover.template" popover-title="{{nodeInfo.title}} Info" popover-trigger="none" popover-placement="top" popover-is-open="nodeInfo.infoShown">
+            <div class="title">
                 <span>{{nodeInfo.title}}</span>
                 <div class="icon ion-trash-a" ng-dblclick="deleteNode($event, nodeInfo)"></div>
                 <div class="icon ion-information-circled" ng-if="nodeInfo.type != 'special'" ng-click="toggleInfoShown($event, nodeInfo)"></div>
