Changed HASH for Version in InfoNode

--- a/client/app/templates/pipeline-tab.html
+++ b/client/app/templates/pipeline-tab.html
@@ -32,7 +32,7 @@
     </script> -->
     <script type="text/ng-template" id="nodeInfo.html">
         <div style="padding: 7px; overflow: auto;">
-            <p>HASH: {{infoNodePopover.node.hash}}</p>
+            <p>Version: {{infoNodePopover.node.hash}}</p>
         </div>
     </script>
     <script type="text/ng-template" id="contextOptions.html">
