--- a/client/app/css/dark-theme.css
+++ b/client/app/css/dark-theme.css
@@ -87,6 +87,10 @@
     background-color: #454545;
 }
 
+.immediate-results > .menu {
+    color: #ddd;
+}
+
 .immediate-results > .results {
     background-color: #2E2E2E;
     -webkit-box-shadow: inset 0px 0px 10px 2px rgba(10, 10, 10, 0.5);
