--- a/client/app/css/main.css
+++ b/client/app/css/main.css
@@ -201,11 +201,15 @@ treecontrol ul {
     width: 100%;
     height: 298px;
     padding: 5px;
+    padding-top: 0;
 }
 
 .immediate-results > .menu {
     width: 100%;
     height: 34px;
+    display: flex;
+    align-items: center;
+    padding-left: 5px;
 }
 
 .immediate-results > .results {
