--- a/client/app/css/dark-theme.css
+++ b/client/app/css/dark-theme.css
@@ -1,3 +1,57 @@
+.panel-top > .server-info {
+    color: #ddd;
+    transition: background-color 1s, box-shadow 1s;
+}
+
+/* ------ NOT USED IN THE END ------*/
+.panel-top > .sherver-info.status-ok {
+    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#3e5700+0,5f8400+100 */
+    background: #3e5700; /* Old browsers */
+    background: -moz-linear-gradient(top,  #3e5700 0%, #5f8400 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top,  #3e5700 0%,#5f8400 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom,  #3e5700 0%,#5f8400 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3e5700', endColorstr='#5f8400',GradientType=0 ); /* IE6-9 */
+    /* Aura effect */
+    -webkit-box-shadow: 0px 0px 60px 2px rgba(79, 110, 0, 0.8);
+    -moz-box-shadow:    0px 0px 60px 2px rgba(79, 110, 0, 0.8);
+    box-shadow:         0px 0px 60px 2px rgba(79, 110, 0, 0.8);
+}
+
+.panel-top > .sherver-info.status-busy {
+    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#774700+0,db8700+100 */
+    background: #774700; /* Old browsers */
+    background: -moz-linear-gradient(top,  #774700 0%, #db8700 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top,  #774700 0%,#db8700 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom,  #774700 0%,#db8700 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#774700', endColorstr='#db8700',GradientType=0 ); /* IE6-9 */
+    /* Aura effect */
+    -webkit-box-shadow: 0px 0px 60px 2px rgba(199, 123, 0, 0.8);
+    -moz-box-shadow:    0px 0px 60px 2px rgba(199, 123, 0, 0.8);
+    box-shadow:         0px 0px 60px 2px rgba(199, 123, 0, 0.8);
+}
+/* ------ UNTIL HERE ------*/
+
+.panel-top > .server-info.status-ok {
+    background-color: #5f8400;
+    -webkit-box-shadow: 0px 0px 60px 2px rgba(79, 110, 0, 0.8);
+    -moz-box-shadow:    0px 0px 60px 2px rgba(79, 110, 0, 0.8);
+    box-shadow:         0px 0px 60px 2px rgba(79, 110, 0, 0.8);
+}
+
+.panel-top > .server-info.status-busy {
+    background-color: #db8700;
+    -webkit-box-shadow: 0px 0px 60px 2px rgba(199, 123, 0, 0.8);
+    -moz-box-shadow:    0px 0px 60px 2px rgba(199, 123, 0, 0.8);
+    box-shadow:         0px 0px 60px 2px rgba(199, 123, 0, 0.8);
+}
+
+.panel-top > .server-info.status-ko {
+    background-color: #9d0000;
+    -webkit-box-shadow: 0px 0px 60px 2px rgba(135, 0, 0, 0.8);
+    -moz-box-shadow:    0px 0px 60px 2px rgba(135, 0, 0, 0.8);
+    box-shadow:         0px 0px 60px 2px rgba(135, 0, 0, 0.8);
+}
+
 .form-control.input,
 .panel-top,
 .nav-tree-container,
