--- a/client/app/css/main.css
+++ b/client/app/css/main.css
@@ -39,15 +39,39 @@ html, body {
 .panel-top {
     position: relative;
     width: 100%;
-    height: 50px;
+    height: 55px;
     /*background-color: blueviolet;*/
     /*background-color: #1e1e1e;*/
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    -webkit-user-select: none;
+    user-select: none;
 }
 
 .panel-main {
     position: relative;
     width: 100%;
-    height: calc(100% - 52px);
+    height: calc(100% - 57px);
+}
+
+
+.panel-top > .server-info > .inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    padding: 10px;
+    padding-left: 15px;
+    padding-right: 15px;
+    border-radius: 5px;
+    box-shadow: inset 0 120px 90px -110px rgba(0, 0, 0, .5);
+}
+
+.panel-top > .server-info {
+    position: relative;
+    border-radius: 5px;
+    font-size: initial;
+    cursor: pointer;
 }
 
 .nav-tree-container, .tab-container {
