--- a/client/app/css/main.css
+++ b/client/app/css/main.css
@@ -36,25 +36,36 @@ html, body {
     overflow: hidden;
 }
 
-.panel-top {
-    position: relative;
-    width: 100%;
-    height: 55px;
-    /*background-color: blueviolet;*/
-    /*background-color: #1e1e1e;*/
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    -webkit-user-select: none;
-    user-select: none;
-}
-
 .panel-main {
     position: relative;
     width: 100%;
     height: calc(100% - 57px);
 }
 
+.panel-top {
+    position: relative;
+    width: 100%;
+    height: 55px;
+    padding-right: 15px;
+    padding-left: 15px;
+    /*background-color: blueviolet;*/
+    /*background-color: #1e1e1e;*/
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    -webkit-user-select: none;
+    user-select: none;
+}
+
+.panel-top .dummy {
+    visibility: hidden;
+}
+
+.panel-top .ion-android-exit {
+    font-size: 2em;
+    cursor: pointer;
+    color: #ddd;
+}
 
 .panel-top > .server-info > .inner {
     position: relative;
