changed serverstatus busy color and serverstatus scope var name

--- a/client/app/templates/panel-header.html
+++ b/client/app/templates/panel-header.html
@@ -1,5 +1,5 @@
 <div class="ion-android-exit dummy"></div>
-<div class="server-info" ng-class="{'status-ok': status=='ok', 'status-busy': status=='busy', 'status-ko': status=='ko'}">
+<div class="server-info" ng-class="{'status-ok': serverStatus=='ok', 'status-busy': serverStatus=='busy', 'status-ko': serverStatus=='ko'}">
     <div class="inner">
         <span style="margin-right: 5px;">Server Status:</span>
         <span>{{running_tasks}} running tasks, {{queue_size}} jobs enqueued</span>
