--- a/client/app/css/dark-theme.css
+++ b/client/app/css/dark-theme.css
@@ -42,7 +42,7 @@
 }
 
 .panel-top > .server-info.status-busy {
-    background-color: #db8700;
+    background-color: #b36e00;
     -webkit-box-shadow: 0px 0px 60px 2px rgba(199, 123, 0, 0.8);
     -moz-box-shadow:    0px 0px 60px 2px rgba(199, 123, 0, 0.8);
     box-shadow:         0px 0px 60px 2px rgba(199, 123, 0, 0.8);
