--- a/client/app/css/main.css
+++ b/client/app/css/main.css
@@ -78,6 +78,10 @@ html, body {
     box-shadow: inset 0 120px 90px -110px rgba(0, 0, 0, .5);
 }
 
+.panel-top > .server-info > .inner:hover {
+    background-color: rgba(255, 255, 255, 0.1);
+}
+
 .panel-top > .server-info {
     position: relative;
     border-radius: 5px;
