--- a/client/app/css/main.css
+++ b/client/app/css/main.css
@@ -196,6 +196,17 @@ treecontrol ul {
     position: relative;
     width: 100%;
     height: 100%;
+    padding: 20px;
+}
+
+.special-pane .title {
+    font-size: x-large;
+}
+
+.special-pane > .section > .content {
+    padding: 15px;
+    width: 100%;
+    margin: auto;
 }
 
 .view-panel {
@@ -443,6 +454,15 @@ treecontrol ul {
 
 .insert-inputs > .value {
     flex: 6 4;
+}
+
+.pipeline-inputs > label {
+    margin-top: 20px;
+    margin-bottom: 10px;
+}
+
+.pipeline-inputs > textarea {
+    height: 100px;
 }
 
 .btn.read-write {
