Added pipeline inside pipeline execution - needs git versioning

--- a/client/app/templates/pipeline-tab.html
+++ b/client/app/templates/pipeline-tab.html
@@ -32,6 +32,7 @@
     </script> -->
     <script type="text/ng-template" id="nodeInfo.html">
         <div style="padding: 7px; overflow: auto;">
+            <p>Type: {{infoNodePopover.node.type}}</p>
             <p>Version: {{infoNodePopover.node.hash}}</p>
         </div>
     </script>
