--- a/client/app/css/main.css
+++ b/client/app/css/main.css
@@ -214,11 +214,44 @@ treecontrol ul {
     margin: auto;
 }
 
+.info-view {
+    cursor: pointer;
+}
+
+.info-view.content-collapsed > td.comment {
+    white-space: nowrap;
+}
+
 td.comment {
     max-width: 480px;
     text-overflow: ellipsis;
-    white-space: nowrap;
     overflow: hidden;
+}
+
+.table>tbody>tr>td.output-view {
+    border-top: 0;
+}
+
+td.output-view > div {
+    border: 1px solid;
+    padding: 5px;
+    font-family: monospace;
+    border-radius: 5px;
+    max-height: 200px;
+    min-height: 20px;
+    overflow: auto;
+}
+
+td.output-view > table {
+    margin-bottom: 15px;
+}
+
+td.output-view > table > tbody > tr > td {
+    padding-left: 35px;
+}
+
+td.output-view > table > tbody > tr > th {
+    padding-top: 10px;
 }
 
 .view-panel {
