--- a/client/app/templates/status-tab.html
+++ b/client/app/templates/status-tab.html
@@ -17,7 +17,7 @@
                 </tr>
               </thead>
               <tbody>
-                <tr ng-repeat="(channelName, metaData) in runningTasks">
+                <tr ng-repeat-start="(channelName, metaData) in runningTasks" class="info-view" ng-click="toggleVisibility(metaData)" ng-class="{'content-collapsed': !metaData.isVisible}">
                     <td>{{metaData.user || '-'}}</td>
                     <td uib-tooltip="{{fullDate(metaData.requestTime)}}" tooltip-append-to-body="true">{{relativeDate(metaData.requestTime)}}</td>
                     <td uib-tooltip="{{fullDate(metaData.startTime)}}" tooltip-append-to-body="true">{{relativeDate(metaData.startTime)}}</td>
@@ -26,6 +26,35 @@
                     <td>{{metaData.task || '-'}}</td>
                     <td class="comment">{{metaData.comment || '-'}}</td>
                     <td>delete</td>
+                </tr>
+                <tr ng-repeat-end="" class="output-view" ng-if="metaData.isVisible">
+                    <td colspan="8" class="output-view">
+                        <table>
+                            <tbody>
+                                <tr>
+                                    <th colspan="2">Inputs:</th>
+                                </tr>
+                                <tr ng-repeat="(inputName, value) in data.data.meta.inputs">
+                                    <td>{{inputName}}:</td>
+                                    <td>{{value}}</td>
+                                </tr>
+                                <tr>
+                                    <th colspan="2">Outputs:</th>
+                                </tr>
+                                <tr ng-repeat="(outputName, value) in data.data.meta.outputs">
+                                    <td>{{outputName}}:</td>
+                                    <td>{{value}}</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                        <!-- <span>Inputs: {{data.data.meta.inputs}}</span> -->
+                        <!-- <span>Outputs: {{data.data.meta.outputs}}</span> -->
+                        <span>Output stream:</span>
+                        <div>
+                            <span ng-repeat-start="res in data.data.transmissions track by $index">{{res}}</span>
+                            <br ng-repeat-end="" />
+                        </div>
+                    </td>
                 </tr>
               </tbody>
             </table>
@@ -79,7 +108,7 @@
                 </tr>
               </thead>
               <tbody>
-                <tr ng-repeat="(channelName, data) in finishedTasks">
+                <tr ng-repeat-start="(channelName, data) in finishedTasks" class="info-view" ng-click="toggleVisibilityFinished(data)" ng-class="{'content-collapsed': !data.isVisible}">
                     <td>{{data.data.meta.user || '-'}}</td>
                     <td uib-tooltip="{{fullDate(data.data.meta.requestTime)}}" tooltip-append-to-body="true">{{relativeDate(data.data.meta.requestTime)}}</td>
                     <td uib-tooltip="{{fullDate(data.data.meta.startTime)}}" tooltip-append-to-body="true">{{relativeDate(data.data.meta.startTime)}}</td>
@@ -88,6 +117,35 @@
                     <td>{{data.data.meta.task || '-'}}</td>
                     <td class="comment">{{data.data.meta.comment || '-'}}</td>
                     <td>delete</td>
+                </tr>
+                <tr ng-repeat-end="" class="output-view" ng-if="data.isVisible">
+                    <td colspan="8" class="output-view">
+                        <table>
+                            <tbody>
+                                <tr>
+                                    <th colspan="2">Inputs:</th>
+                                </tr>
+                                <tr ng-repeat="(inputName, value) in data.data.meta.inputs">
+                                    <td>{{inputName}}:</td>
+                                    <td>{{value}}</td>
+                                </tr>
+                                <tr>
+                                    <th colspan="2">Outputs:</th>
+                                </tr>
+                                <tr ng-repeat="(outputName, value) in data.data.meta.outputs">
+                                    <td>{{outputName}}:</td>
+                                    <td>{{value}}</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                        <!-- <span>Inputs: {{data.data.meta.inputs}}</span> -->
+                        <!-- <span>Outputs: {{data.data.meta.outputs}}</span> -->
+                        <span>Output stream:</span>
+                        <div>
+                            <span ng-repeat-start="res in data.data.transmissions track by $index">{{res}}</span>
+                            <br ng-repeat-end="" />
+                        </div>
+                    </td>
                 </tr>
               </tbody>
             </table>
