Folders are automatically created if target folder does not exist and automatically deleted when directory is empty.

--- a/client/app/css/main.css
+++ b/client/app/css/main.css
@@ -116,6 +116,16 @@ html, body {
     border: 0;
 }
 
+.modal-body > .ion-folder {
+    font-size: 1.5em;
+    margin-left: 35px;
+    cursor: pointer;
+}
+
+.modal-body > .ion-folder:active {
+    opacity: 0.6;
+}
+
 treecontrol ul {
     overflow: inherit;
 }
