--- a/client/app/templates/saveas-modal.html
+++ b/client/app/templates/saveas-modal.html
@@ -3,6 +3,7 @@
 </div>
 <div class="modal-body form-group">
     <!-- <input type="text" data-ng-model="saveLocation" class="form-control"> -->
+    <div class="ion-folder"></div>
     <div class="nav-tree-container" style="float: none; height: 300px; width: 90%; margin: auto; border-radius: 4px">
         <treecontrol
             class="tree-dark"
