Interfaces can be created and destroy working as a pack...

--- a/client/app/templates/tab-set.html
+++ b/client/app/templates/tab-set.html
@@ -4,7 +4,7 @@
             <ul>
                 <li ng-click="newTab('code')">New Script</li>
                 <li ng-click="newTab('pipeline')">New Pipeline</li>
-                <li ng-click="newInterface()">New Interface</li>
+                <li ng-click="newTab('intcode')">New Interface</li>
             </ul>
         </div>
     </script>
